--- a/Sesion 7/base.html
+++ b/Sesion 7/base.html
@@ -7,22 +7,19 @@
 </head>
 
 <body>
-    <div id="banner">
-        <img src="img/banner.png">
+    <div >
+        <img id="banner" src="img/banner.png">
 
     </div>
 
-    <div id="fotos">
-        <img src="img/uno.jpg" alt="poker">
+    <div >
+        <img id="fotos" src="img/uno.jpg" alt="poker">
     </div>
 
     <div id="cabecera">
         <h1>Cinco sitios por donde pueden colarse los ‘hackers’ y cómo solucionarlo</h1>
-
     </div>
-
     <br>
-
     <div id="pie">
         <p>Estos son los remedios para cazar a los ciberdelincuentes antes de que accedan a nuestros dispositivos
             conectados para robar <br>información</p>
@@ -42,8 +39,8 @@
 
     <br>
     <div id="texto">
-        <div id="letra">
-            <img src="img/p.png">
+        <div>
+            <img id="letra" src="img/p.png">
         </div>
 
         <p> ara algunos, el mayor de los tesoros puede estar sumergido en una pecera. Si no, que le pregunten al casino
@@ -113,9 +110,8 @@
         - MSSP. Si los desarrolladores del dispositivo no pueden hacerse cargo de su seguridad, lo ideal es que
         contraten los servicios de un MSSP, siglas en inglés de proveedor de seguridad gestionada.
         <br><br><br><br>
-        <div id="fotos">
-            <br>
-            <img src="img/tres.jpg" alt="movil">
+        <div>
+            <img id="fotos" src="img/tres.jpg" alt="movil">
         </div>
         <br><br><br><br>
         Hace dos años, una mujer holandesa denunció que la habían espiado a través de una cámara que instaló en su
@@ -144,8 +140,8 @@
         - Antivirus. Instalar un antivirus que detecte, pare y elimine cualquier ataque en la red a través de
         programas maliciosos.
         <br><br><br><br>
-        <div id="fotos">
-            <img src="img/cuatro.jpg" alt="coche autonomo">
+        <div>
+            <img id="fotos" src="img/cuatro.jpg" alt="coche autonomo">
         </div>
         <br><br><br><br>
         Uno de los casos de hackeos más sonados fue el de dos estadounidenses expertos en seguridad que accedieron
@@ -178,8 +174,8 @@
         - Identificación del dispositivo. Si el vehículo cuenta con su propio identificador, igualmente que los
         sensores que incorpore, será posible aislarlos en caso de sufrir cualquier ataque.
         <br><br><br><br>
-        <div id="fotos">
-            <img src="img/cinco.jpg" alt="indutria">
+        <div >
+            <img id="fotos" src="img/cinco.jpg" alt="indutria">
         </div>
         <br><br><br><br>
         Kaspersky Lab detectó ataques por software malicioso en más del 40% de los equipos ICS (Sistemas de Control
@@ -209,8 +205,8 @@
         - Cifrado de datos. Empleamos un algoritmo para transformar un mensaje, sin atender a su estructura
         lingüística o significado, de tal forma que sea incomprensible para quien no disponga de una clave secreta.
         <br><br><br><br>
-        <div id="fotos">
-            <img src="img/seis.jpg" alt="ciudad inteligente">
+        <div>
+            <img id="fotos" src="img/seis.jpg" alt="ciudad inteligente">
         </div>
         <br><br><br><br>
         En 2017, la ciudad estadounidense de Dallas sufrió un ataque contra sus sistemas de emergencia. En plena
@@ -252,8 +248,8 @@
 
 
     </div>
-    <div id="fotofinal">
-        <img src="img/final.png">
+    <div">
+        <img id="fotofinal"  src="img/final.png">
     </div>
 
     <div id="listafinal">
