--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </h1>
 
     <ul>
-        <li><a class="one" href="6/Index.html">Página Nike Digital</a></li>
-        <li><a class="two" href="7/base.html">Página El País</a></li>
+        <li><a class="one" href="VSCODE/6">Página Nike Digital</a></li>
+        <li><a class="two" href="VSCODE/7">Página El País</a></li>
     </ul>
     
   </body>
