--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a class="one" href="6/index.html">Página Nike Digital</a></li>
         <li><a class="two" href="7/index.html">Página El País</a></li>
+        <li><a href="10/index.html" > Galeria </a> </li>
     </ul>
     
   </body>
