--- a/7/index.html
+++ b/7/index.html
@@ -8,13 +8,20 @@
 </head>
 
 <body>
-    <div>
-        <img id="banner" src="img/banner.png">
+<header>
+    <ul class="cabeza">
+    
+        <li> <a href="#fotos"> Poker</a></li>
+        <li> <a href="#c"> Reloj arena</a></li>
+        <li> <a href="#d"> Movil</a></li>
+        <li> <a href="#e"> Coche </a></li>
+        <li> <a href="#f"> Fabrica</a> </li>
+        <li> <a href="#g"> Ciudad Inteligente</a></li>
+    </ul>
+</header>
 
-    </div>
-
     <div>
-        <img id="fotos" src="img/uno.jpg" alt="poker">
+        <img id="fotos" src="img/uno.jpg" alt="poker" >
     </div>
 
     <div id="cabecera">
@@ -82,7 +89,7 @@
         </p>
 
         <div class="arena">
-            <img src="img/dos.jpg" alt="reloj arena">
+            <img src="img/dos.jpg" alt="reloj arena" id="c">
         </div>
 
         <br><br><br><br>
@@ -122,7 +129,7 @@
         </p>
 
         <div class="movil">
-            <img src="img/tres.jpg" alt="movil">
+            <img src="img/tres.jpg" alt="movil" id="d">
         </div>
 
         <br><br><br><br>
@@ -155,7 +162,7 @@
             <br><br><br><br>
         </p>
         <div class="coche">
-            <img  src="img/cuatro.jpg" alt="coche">
+            <img  src="img/cuatro.jpg" alt="coche" id="e">
         </div>
 
         <br><br><br><br>
@@ -193,7 +200,7 @@
         </p>
 
         <div class="fabrica">
-            <img src="img/cinco.jpg" alt="indutria">
+            <img src="img/cinco.jpg" alt="indutria" id="f">
         </div>
 
         <br><br><br><br>
@@ -227,7 +234,7 @@
         </p>
 
         <div class="ciudad">
-            <img src="img/seis.jpg" alt="ciudad inteligente">
+            <img src="img/seis.jpg" alt="ciudad inteligente" id="g">
         </div>
 
         <br><br><br><br>
