cambio de nombres alt

--- a/10/index.html
+++ b/10/index.html
@@ -25,35 +25,35 @@
     <section class="flex-contain">
 
     <div class="piedras">
-        <a href="cuarzo.html"><img src="img/cuarzorosa.jpg" alt="imagen 1" title="Cuarzo Rosa"></a>
+        <a href="cuarzo.html"><img src="img/cuarzorosa.jpg" alt="Cuarzo Rosa" title="Cuarzo Rosa"></a>
         
-        <a href="amatista.html" ><img src="img/amatista.jpg" alt="imagen 2" title="Amatista"></a> 
+        <a href="amatista.html" ><img src="img/amatista.jpg" alt="Amatista" title="Amatista"></a> 
         
-        <a href="apatito.html" ><img src="img/apatito.jpg" alt="imagen 3" title="Apatito"></a>
+        <a href="apatito.html" ><img src="img/apatito.jpg" alt="Apatito" title="Apatito"></a>
 
-        <a href="topacio.html" ><img src="img/topacio.jpg" alt="imagen 4" title="Topacio"></a>
+        <a href="topacio.html" ><img src="img/topacio.jpg" alt="Topacio" title="Topacio"></a>
 
     </div>
 
     <div class="piedras">
-        <a href="sardonica.html" ><img src="img/Sardónica.jpg" alt="imagen 5" title="Sardónica"></a>
+        <a href="sardonica.html" ><img src="img/Sardónica.jpg" alt="Sardónica" title="Sardónica"></a>
 
-        <a href="lapislazuli.html" ><img src="img/Lapislazuli.jpg" alt="imagen 6" title="Lapislázuli"></a>
+        <a href="lapislazuli.html" ><img src="img/Lapislazuli.jpg" alt="Lapislázuli" title="Lapislázuli"></a>
 
-        <a href="jade.html" ><img src="img/Jadebruto.jpg" alt="imagen 7" title="Jade"></a>
+        <a href="jade.html" ><img src="img/Jadebruto.jpg" alt="Jade" title="Jade"></a>
 
-        <a href="rubi.html" ><img src="img/Rubí.jpg" alt="imagen 8" title="Rubí"></a>
+        <a href="rubi.html" ><img src="img/Rubí.jpg" alt="Rubí" title="Rubí"></a>
 
     </div>
 
     <div class="piedras">
-        <a href="zircon.html" ><img src="img/Zircón.jpg" alt="imagen 9" title="Zircón"></a>
+        <a href="zircon.html" ><img src="img/Zircón.jpg" alt="Zircón" title="Zircón"></a>
 
-        <a href="piedralunar.html" ><img src="img/Piedralunar.jpg" alt="imagen 10" title="Piedra Lunar"></a>
+        <a href="piedralunar.html" ><img src="img/Piedralunar.jpg" alt="Piedra Lunar" title="Piedra Lunar"></a>
 
-        <a href="coralina.html" ><img src="img/Coralina.jpg" alt="imagen 11" title="Coralina"></a>
+        <a href="coralina.html" ><img src="img/Coralina.jpg" alt="Coralina" title="Coralina"></a>
 
-        <a href="turquesa.html" ><img src="img/Turquesa.jpg" alt="imagen 12" title="Turquesa"></a>
+        <a href="turquesa.html" ><img src="img/Turquesa.jpg" alt="Turquesa" title="Turquesa"></a>
 
     </div>
     </section> 
