--- a/16/index.html
+++ b/16/index.html
@@ -1,63 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5bc4df555a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <title>Tipografías</title>
 </head>
+
 <body>
-    
+
+   
     <section class="flex-contain">
 
-    <div class="todo">
-
-        <div class="titulo">
-            <h1 class="t1"> </h1>
+        <div class="cabeza">
+            <h1 class="tipo">Tipografías<i class="fa-solid fa-heart"></i></h1>
         </div>
 
-        <p class="t1">  </p>
+        <div class="uno">
 
-        <div class="titulo">
-            <h1 class="t2"> friiiio</h1>
+            <div class="titulo">
+                <h1 class="t1"> DaysOne </h1>
+            </div>
+
+            <p class="t1"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel
+                eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                ut laoreet dolore magna aliquam erat volutpat. Ut wisi </p>
+
+            <div class="titulo">
+                <h1 class="t2"> LondrinaShadow</h1>
+            </div>
+
+            <p class="t2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel
+                eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                ut laoreet dolore magna aliquam erat volutpat. Ut wisi </p>
+
         </div>
 
-        <p class="t2">  </p>
+        <div class="uno">
 
 
-        <div class="titulo">
-            <h1 class="t3"> </h1>
+            <div class="titulo">
+                <h1 class="t3">Nabla </h1>
+            </div>
+
+            <p class="t3"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel
+                eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
+
+
+            <div class="titulo">
+                <h1 class="t4">NewRocker </h1>
+            </div>
+
+            <p class="t4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel
+                eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
         </div>
 
-        <p class="t3">  </p>
+        <div class="uno">
+            <div class="titulo">
+                <h1 class="t5">Offside </h1>
+            </div>
+
+            <p class="t5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel
+                eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                ut laoreet dolore magna aliquam erat volutpat. Ut wisi </p>
 
 
-        <div class="titulo">
-            <h1 class="t4"> </h1>
+            <div class="titulo">
+                <h1 class="t6">Rubik</h1>
+            </div>
+
+            <p class="t6">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel
+                eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                ut laoreet dolore magna aliquam erat volutpat. Ut wisi </p>
+
+
+
+
+
         </div>
-
-        <p class="t4">  </p>
-
-
-        <div class="titulo">
-            <h1 class="t5"> </h1>
-        </div>
-
-        <p class="t5">  </p>
-
-
-        <div class="titulo">
-            <h1 class="t6"> </h1>
-        </div>
-
-        <p class="t6">  </p>
-
-
-       
-
-
-    </div>
- </section> 
+    </section>
 
 </body>
+
 </html>
