--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="6/index.html">Página Nike Digital</a></li>
         <li><a href="7/index.html">Página El País</a></li>
         <li><a href="10/index.html" > Galeria </a> </li>
+        <li><a href="16/index.html" > Tipografías </a> </li>
     </ul>
     
   </body>
