--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="7/index.html">Página El País</a></li>
         <li><a href="10/index.html" > Galeria </a> </li>
         <li><a href="16/index.html" > Tipografías </a> </li>
-        <li><a href="Bootstrap/" > Tipografías </a> </li>
+        <li><a href="Bootstrap/sesion22.html" > Maquetación</a> </li>
     </ul>
     
   </body>
