--- a/6/index.html
+++ b/6/index.html
@@ -4,10 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Nike Digital</title>
 </head>
 
 <body>
+
+    <div class="container-fluid">
+        <div class="col-12" id="menu">
+            <div class="collapse" id="navbarToggleExternalContent"></div>
+            <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburguesa">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="hamburguesa">   
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">Nike</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>           
+                    </ul>
+                </div>
+            </nav>
+            <div id="demo" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="imagenfondo/uno.jpg" alt="imagen nike" class="d-block" style="width:100%">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenfondo/dos.jpg" alt="imagen nike" class="d-block" style="width:100%">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenfondo/tres.jpg" alt="imagen nike" class="d-block" style="width:100%">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>            
+        </div>
+    </div>
     
     <div id="cajasuperior">
 
