--- a/6/index.html
+++ b/6/index.html
@@ -13,14 +13,14 @@
 <body>
 
     <div class="container-fluid">
-        <div class="col-12" id="menu">
+        <div class="col-12" id="maq">
             <div class="collapse" id="navbarToggleExternalContent"></div>
             <nav class="navbar navbar-expand-sm navbar-light bg-light">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburguesa">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="hamburguesa">   
+                <div class="collapse navbar-collapse" id="menu">   
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">Nike</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Catalogo</a></li>
