--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -1,124 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/5bc4df555a.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="main.css">
+
     <title>Portfolio</title>
 </head>
+
 <body>
-
-    <div class="container-fluid">
-        <!-- Header Section -->
-        <div class="row">
-            <div class="col-12 bg-warning text-center p-5 header-section">
-                <h1 class="animate-fade-in">Mi Portfolio</h1>
-                <p class="animate-slide-in">Bienvenido/a a mi espacio creativo</p>
-            </div>
-        </div>
-
-        <!-- About Section -->
-        <div class="row">
-            <div class="col-md-4 bg-success text-white text-center p-4">
-                <h3>Sobre Mí</h3>
-                <p>Breve descripción de quién eres, tu formación y experiencia.</p>
-            </div>
-            <div class="col-md-8 bg-info text-white p-4">
-                <h3>Foto o Imagen Representativa</h3>
-                <img src="https://via.placeholder.com/800x300" class="img-fluid rounded" alt="Sobre mí">
-            </div>
-        </div>
-
-        <!-- Portfolio Section -->
-        <div class="row">
-            <div class="col-12 bg-light text-center p-4">
-                <h2>Mis Proyectos</h2>
-                <p>Aquí puedes encontrar algunos de mis trabajos destacados.</p>
-            </div>
-        </div>
-        <div class="row">
-            <!-- Repetición de proyectos para alargar -->
-            <div class="col-md-4 p-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Proyecto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Proyecto 1</h5>
-                        <p class="card-text">Descripción breve del proyecto.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 p-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Proyecto 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Proyecto 2</h5>
-                        <p class="card-text">Descripción breve del proyecto.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 p-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Proyecto 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Proyecto 3</h5>
-                        <p class="card-text">Descripción breve del proyecto.</p>
-                    </div>
+    <header class="header-section">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center nopo d-flex justify-content-center align-items-center">
+                    <nav>
+                        <ul>
+                            <li><a href="yooo.html"><i class="fas fa-heart"></i>Sobre Mí</a></li>
+                            <li><a href="ooo">Servicios</a></li>
+                            <li><a href="ooo">Contacto</a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
 
-        <!-- Extra Section (Testimonios) -->
-        <div class="row bg-secondary text-white p-5">
-            <div class="col-12 text-center">
-                <h2>Testimonios</h2>
-                <p>Lo que dicen sobre mí.</p>
+
+    </header>
+    
+    <div class="row justify-content-center">
+        <div class="col-12 text-center susu d-flex justify-content-center align-items-center">
+
+            <video autoplay muted loop class="video-bg">
+                <source src="video/estrellas.mp4" type="video/mp4">
+                Tu navegador no soporta videos HTML5.
+            </video>
+            <div class="capa"></div>
+
+            <p class="pepe">Mabi Blanco Portfolio 2025</p>
+        </div>
+    </div>
+    <div class="espacio"></div>
+
+    <div class="row justify-content-center">
+        <div class=" col-md-4 text-center popo d-flex justify-content-center align-items-center">
+            <div class="card">
+                <h4>Sobre mi</h4>
+                <img src="img/yo.jpg" class="img-fluid" alt="ilustracion de mabi">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.
+                    Curabitur venenatis, enim nec auctor feugiat, eros velit consequat eros, et vulputate leo lorem sit
+                    amet nunc. Sed ac sapien vel nisi pretium cursus non at nunc.</p>
             </div>
-            <div class="col-md-6 p-4">
-                <blockquote class="blockquote">
-                    <p>¡Mabi es increíble! Su trabajo siempre supera las expectativas.</p>
-                    <footer class="blockquote-footer text-white">Cliente 1</footer>
-                </blockquote>
+        </div>
+        <div class=" col-md-4 text-center popo d-flex justify-content-center align-items-center">
+            <div class="card">
+                <h4>Habilidades</h4>
+                <img src="img/yo3.jpg" class="img-fluid" alt="ilustracion de mabi">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.
+                    Curabitur venenatis, enim nec auctor feugiat, eros velit consequat eros, et vulputate leo lorem sit
+                    amet nunc. Sed ac sapien vel nisi pretium cursus non at nunc.</p>
             </div>
-            <div class="col-md-6 p-4">
-                <blockquote class="blockquote">
-                    <p>Creativa y profesional, definitivamente la recomendaría.</p>
-                    <footer class="blockquote-footer text-white">Cliente 2</footer>
-                </blockquote>
+        </div>
+        <div class=" col-md-4 text-center popo d-flex justify-content-center align-items-center">
+            <div class="card">
+                <h4>Experiencia</h4>
+                <img src="img/yo2 (1).jpg" class="img-fluid" alt="ilustracion de mabi">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.
+                    Curabitur venenatis, enim nec auctor feugiat, eros velit consequat eros, et vulputate leo lorem sit
+                    amet nunc. Sed ac sapien vel nisi pretium cursus non at nunc.</p>
             </div>
         </div>
 
-        <!-- Contact Section -->
-        <div class="row">
-            <div class="col-12 bg-dark text-white text-center p-4">
-                <h2>Contacto</h2>
-                <p>¡Ponte en contacto conmigo!</p>
-                <form>
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="name" placeholder="Tu nombre">
+        <div class="espacio"></div>
+
+        <div class="row justify-content-center">
+            <div class="col-12 text-center d-flex justify-content-center align-items-center">
+                <p class="tt">Identidad de marca</p>
+            </div>
+
+            <div class="container-fluid">
+                <div class="col-12" id="maq">
+
+                    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                        </div>
+
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/carrusel 1.png"  class="d-block" style="width:100%">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/carrusel2.png"  class="d-block" style="width:100%">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/carrusel 3.png"  class="d-block" style="width:100%">
+                            </div>
+
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" placeholder="Tu correo">
-                    </div>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="message" rows="3" placeholder="Tu mensaje"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                </form>
+
+
+                </div>
+                <div class="espacio"></div>
+
+
+
             </div>
         </div>
-
-        <!-- Footer Section -->
-        <div class="row">
-            <div class="col-12 bg-secondary text-white text-center p-3">
-                <p>© 2025 Mi Portfolio - Diseñado por Mabi</p>
+        <div class="row justify-content-center">
+            <div class="col-12 text-center d-flex justify-content-center align-items-center">
+                <p class="tt">Branding</p>
+            </div>
+            <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/picto.png" class="d-block" style="width:100%">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/cartel-transformed.png"  class="d-block" style="width:100%">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/siempre.png"  class="d-block" style="width:100%">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
             </div>
         </div>
     </div>
+    <div class="espacio"></div>
 
+    <div class="row justify-content-center">
+        <div class="col-12 text-center d-flex justify-content-center align-items-center">
+            <p class="tt">Maquetación</p>
+        </div>
+        <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carousel2" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#carousel2" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#carousel2" data-bs-slide-to="2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/maq1.png"  class="d-block" style="width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/maq2.png" class="d-block" style="width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/maq1.png" class="d-block" style="width:100%">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+    </div>
+    </div>
+    <div class="espacio"></div>
+    <div class="row justify-content-center">
+        <div class="col-12 text-center d-flex justify-content-center align-items-center">
+            <p class="tt">Editorial</p>
+        </div>
+        <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carousel3" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#carousel3" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#carousel3" data-bs-slide-to="2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/edit1.png"  class="d-block" style="width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/edit2.png" class="d-block" style="width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/edit3.png" class="d-block" style="width:100%">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+    </div>
+    </div>
+
+
+    <div class="espacio"></div>
+    <footer>
+        <div class="roro">
+
+            <div class="row justify-content-center">
+                <div class="col-md-4 text-center d-flex justify-content-center align-items-center">
+                    <p class="yuyu">Redes sociales</p>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center d-flex justify-content-center align-items-center flex-column">
+                        <ul>
+                            <li>
+                                <a href="ooo" >
+                                    <i class="fab fa-tiktok"></i> @Mabisdesing
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ooo" >
+                                    <i class="fab fa-instagram"></i> @Mabisdesingg_
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="espacio"></div>
+
+
+
+
+
+
+
+    </div>
 </body>
+
 </html>
