cambio de nombre

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="10/index.html" > Galeria </a> </li>
         <li><a href="16/index.html" > Tipografías </a> </li>
         <li><a href="Bootstrap/sesion22.html" > Maquetación</a> </li>
-        <li><a href="PORTFOLIO/index.html" > Maquetación</a> </li>
+        <li><a href="PORTFOLIO/index.html" > Web Personal</a> </li>
     </ul>
     
   </body>
