--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="Bootstrap/sesion22.html" > Maquetación</a> </li>
         <li><a href="PORTFOLIO/index.html" > Web Personal</a> </li>
         <li><a href="EXAMEN FINAL/index.html" >Examen Final</a> </li>
+        <li><a href="Memoria/index.html" >Plantilla memoria</a> </li>
     </ul>
     
   </body>
