--- a/Memoria/index.html
+++ b/Memoria/index.html
@@ -69,7 +69,7 @@
                 <div class="card">
                     <img src="img/portada.png" alt="Imagen de ejemplo" class="card-img">
                     <div class="card-body">
-                        <h5 class="card-title">Briefing</h5>
+                        <h5 class="card-title">¿De que trata el proyecto?</h5>
                         <p class="card-text">Desarrollo del proyecto</p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
             <div class="col-12 col-md-6 col-lg-6  luli">
 
 
-                <p><span class="texto"><span class="frente">¿De que trata el proyecto?</span> <br>Lorem Ipsum is simply
+                <p><span class="texto"><span class="frente">Briefing</span> <br>Lorem Ipsum is simply
                         dummy text of
                         the printing and typesetting industry. Lorem Ipsum has been the
                         industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
